<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrowseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="83.5dp"
                android:layout_height="125dp"
                android:scaleType="fitCenter"
                android:src="@drawable/indiana_jones" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginLeft="16dp"
                android:ellipsize="end"
                android:maxLines="7"
                android:text="@string/indiana_jones_movie_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="83.5dp"
                android:layout_height="125dp"
                android:scaleType="fitCenter"
                android:src="@drawable/breakin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginLeft="16dp"
                android:ellipsize="end"
                android:maxLines="7"
                android:text="@string/breakin_movie_description" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movie_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="83.5dp"
                android:layout_height="125dp"
                android:scaleType="fitCenter"
                android:src="@drawable/teen_wolf"
                android:transitionName="@string/image_transition" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginLeft="16dp"
                android:ellipsize="end"
                android:maxLines="7"
                android:text="@string/teen_wolf_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="83.5dp"
                android:layout_height="125dp"
                android:scaleType="fitCenter"
                android:src="@drawable/breakin2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginLeft="16dp"
                android:ellipsize="end"
                android:maxLines="7"
                android:text="@string/breakin2_movie_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="83.5dp"
                android:layout_height="125dp"
                android:scaleType="fitCenter"
                android:src="@drawable/black_panther" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginLeft="16dp"
                android:ellipsize="end"
                android:maxLines="7"
                android:text="@string/black_panther_movie_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="83.5dp"
                android:layout_height="125dp"
                android:scaleType="fitCenter"
                android:src="@drawable/star_wars" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginLeft="16dp"
                android:ellipsize="end"
                android:maxLines="7"
                android:text="@string/star_wars_description" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
